OpenSLP Change Log (stable-1-0)
-------------------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

07/23/01 matt@caldera.com
Branched CVS into HEAD and stable-1.0.  This is the stable branch.

*** Tag OpenSLP 1.0.0 ****

07/18/01 matt@caldera.com
Fixed couple very minor memory leaks in slpd

07/13/01 matt@caldera.com
Fixed slp.conf parsing problem when properties are set to empty string

07/13/01 matt@caldera.com
Fixed possible SEGV when an unset property is accessed

07/13/01 matt@caldera.com
Added the getproperty feature to slptool

07/11/01 matt@caldera.com
Applied Todd Poynor's patches to slpd_knownda.c

07/11/01 matt@caldera.com
Added collation feature for SrvRqst and SrvTypeRqst

06/27/01 matt@caldera.com
Applied patch to fix SEGV in SLPParseSrvURL 

06/22/01 matt@caldera.com 
Added code that makes it so that no echo is made to ourself if slpd is
running as a DA

06/22/01 matt@caldera.com
Fixed up logging of registration and known DAs so that logging does not
occur changes are made to the databases

*** Tag OpenSLP 0.9.1 ****

06/13/01 matt@caldera.com
Fixed #417173 - Whitespace between scope fields
Fixed #417162 - Bad documentation in default slp.reg

06/12/01 matt@caldera.com
Fixed #432594 - Registrations not checked for syntax
Fixed 418877 - SegV when finding attrs on certain URLS
Fixed 418894 - Escape chars as attr names kill slpd

05/31/01 matt@caldera.com
Testing commits mailing list...

05/30/01 matt@caldera.com
Applied BSD patch from Terry Lambert

05/10/01 rganesan@myrealbox.com
Updated NEWS.

05/10/01 rganesan@myrealbox.com
Fixed up broken SLPv1 support.

05/10/01 rganesan@myrealbox.com
Changed includes of the form "../common/header.h" to "header.h" because of